--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,78 @@
     /* Eléments principaux de la page */
 
-    *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
     
-    body{
-        font-family: "roboto", sans-serif;
-        font-size: 20px;
-    }
+body{
+    font-family: "roboto", sans-serif;
+    font-size: 20px;
+}
     
-    h3{
-        font-size: 21px;
-    }
+h3{
+    font-size: 21px;
+}
     
-    h2{
-        font-size: 27px
-    }
+h2{
+    font-size: 27px
+}
     
     
         /* HEADER */
     
-    #logo_header{
-        display: flex;
-        justify-content: center;
-        padding: 26px 0 14px;
-        height: 75px;
-        box-shadow: 0px 3px 6px rgb(195, 195, 195);
-    }
+#logo_header{
+    display: flex;
+    justify-content: center;
+    padding: 26px 0 14px;
+    height: 75px;
+    box-shadow: 0px 3px 6px rgb(195, 195, 195);
+}
     
-    #barre_de_recherche{
-        display: flex;
-        justify-content: center;
-        padding: 15px;
-        font-size: 18px;
-        background-color: rgb(238, 238, 238);
-        margin-top: 5px;
-    } 
+#barre_de_recherche{
+    display: flex;
+    justify-content: center;
+    padding: 15px;
+    font-size: 18px;
+    background-color: rgb(238, 238, 238);
+    margin-top: 5px;
+} 
     
-    input{
-        font-size: 18px;
-        padding-left: 20px;
-        width: 189px;
-        border: none;
-        background-color: transparent;
-    }
+input{
+    font-size: 18px;
+    padding-left: 20px;
+    width: 189px;
+    border: none;
+    background-color: transparent;
+}
+
+
+        /* MAIN */
+
+#bloc_main{
+    background-color: rgb(245, 245, 245);
+    text-align: center;
+    padding: 40px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#bloc_main_description{
+    padding: 20px 0 30px 0;
+    font-size: 21px;
+    color: rgb(110, 110, 110);
+}
+
+#bloc_main a{
+    background-color: #FF79DA;
+    font-size: 17.5px;
+    color: white;
+    padding: 17px 25px;
+    border-radius: 30px;
+    border: none;
+    box-shadow: 0px 5px 8px rgb(195, 195, 195);
+    margin-bottom: 25px;
+    text-decoration: none;
+}
