--- a/styles.css
+++ b/styles.css
@@ -196,3 +196,30 @@ figcaption{
     position: absolute;
     right: 30px;
 }
+
+
+        /* FOOTER */
+
+#bloc_footer{
+    background-color: rgb(70, 70, 70);
+    color: white;
+    padding: 30px;
+}
+    
+#bloc_footer h3{
+    font-family: "shrikhand", sans-serif;
+    font-weight: normal;
+    padding-bottom: 9px;
+}
+    
+#bloc_footer li{
+    list-style-type: none;
+    padding-top: 9px;
+    font-size: 18px;
+}
+    
+.fa-utensils,
+.fa-handshake-angle{
+    font-size: 15px;
+    width: 28px;
+}
