--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ input{
 }
 
 #bloc_main a{
-    background-color: #FF79DA;
+    background: linear-gradient(172deg, #FF79DA,#9356DC);
     font-size: 17.5px;
     color: white;
     padding: 17px 25px;
