--- a/css/styles_restaurants.css
+++ b/css/styles_restaurants.css
@@ -54,22 +54,19 @@ h1{
 }
 
 #carte_menu #menu{
-    border: 1px solid red;
-    border-radius: 40px;
+    border-radius: 40px 40px 0 0;
     width: 100%;
-    top: 100%;
-    background-color: rgb(250, 250, 250);
-    display: flex;
-    flex-direction: column;
+    background: rgb(250, 250, 250);
+    position: relative;
+    margin-top: -50px;
 }
 
 #nom_restaurant{
-    border: 1px solid red;
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 21px;
-    padding: 10px 20px 20px 0;
+    padding: 20px 20px 5px 0;
 }
 
 #nom_restaurant i{
@@ -77,17 +74,15 @@ h1{
 }
 
 .repas{
-    border: 1px solid red;
     text-transform: uppercase;
     font-size: 17px;
     font-weight: normal;
     border-bottom: 3.5px solid #99E2D0;
-    padding-bottom: 5px;
+    padding: 25px 0 5px;
     width: 43px;
 }
 
 .assiette{
-    border: 1px solid red;
     margin: 15px 0;
     padding: 10px;
     border-radius: 15px;
@@ -96,7 +91,6 @@ h1{
 }
     
 .assiette_description{
-    border: 1px solid red;
     display: flex;
     justify-content: space-between;
     padding-right: 15px;
@@ -107,9 +101,18 @@ h1{
 }
 
 #bouton_commander{
-    border: 1px solid red;
     text-align: center;
-    width: 100%;
+    padding: 30px 0;
+}
+
+#bouton_commander button{
+    font-size: 17px;
+    color: white;
+    border-radius: 30px;
+    background: linear-gradient(172deg, #FF79DA, #9356DC);
+    padding: 15px 55px;
+    border: none;
+    box-shadow: 0 5px 8px rgb(200, 200, 200);
 }
 
 
