ajout du menu A la francaise et modification de la carte La palette du gout

--- a/css/styles_restaurants.css
+++ b/css/styles_restaurants.css
@@ -49,6 +49,10 @@ h1{
     width: 100%;
 }
 
+#carte_menu h3{
+    padding-bottom: 5px;
+}
+
 #carte_menu #menu{
     border-radius: 40px 40px 0 0;
     width: 100%;
