--- a/css/styles_restaurants.css
+++ b/css/styles_restaurants.css
@@ -71,6 +71,52 @@ h1{
     padding: 20px 20px 5px 0;
 }
 
+.coeur{
+    display: flex;
+}
+
+.coeur .plein{
+    display: none;
+}
+
+.coeur:hover .contour{
+    display: none;
+}
+
+.coeur:hover .plein{
+    display: block;
+    background: linear-gradient(172deg, #FF79DA,#9356DC);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    animation: battement_coeur 1200ms cubic-bezier(0,0,.4,1);  
+}
+
+@keyframes battement_coeur {
+    0% {
+        transform: scale(0);
+    }
+
+    55% {
+        transform: scale(1.25);
+    }
+    58% {
+        transform: scale(1.05);
+    }
+    63% {
+        transform: scale(1.25);
+    }
+    68% {
+        transform: scale(1.05);
+    }
+    73% {
+        transform: scale(1.25);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 #nom_restaurant i{
     font-size: 25px;
 }
