--- a/css/styles_restaurants.css
+++ b/css/styles_restaurants.css
@@ -156,9 +156,6 @@ h1{
 
 #bouton_commander a{
     text-decoration: none;
-}
-
-#bouton_commander p{
     font-size: 17px;
     color: white;
     border-radius: 30px;
@@ -166,6 +163,11 @@ h1{
     padding: 15px 55px;
     border: none;
     box-shadow: 0 5px 8px rgb(200, 200, 200);
+}
+
+#bouton_commander a:hover{
+    opacity: .8;
+    box-shadow: 0px 5px 8px rgb(110, 110, 110);
 }
 
 
