--- a/css/styles.css
+++ b/css/styles.css
@@ -269,6 +269,51 @@ figcaption{
 }
 
 
+        /* LOADER */
+
+.spinner{
+    height: 500px;
+    line-height: 500px;
+    background-color: pink;
+    text-align: center;
+}
+
+.loader{
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+}
+
+.loader_quart{
+    border: 5px solid rgba(255, 255, 255, 0.5);
+    border-radius: 50px;
+}
+
+.loader_quart:after{
+    content: "";
+    position: absolute;
+    top: -6px;
+    left: -6px;
+    bottom: -6px;
+    right: -6px;
+    border: 5px solid transparent;
+    border-radius: 50px;
+    border-top-color: #fff;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+
         /* FOOTER */
 
 #bloc_footer{
