--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,10 @@ input{
     align-items: center;
 }
 
+#section_fonctionnement .choix:hover .choix_icon{
+    color: #9356DC;
+}
+
 #section_fonctionnement .choix:hover{
     background: #f4ebfe;
 }
@@ -224,6 +228,19 @@ figcaption{
     animation: battement_coeur 1200ms cubic-bezier(0,0,.4,1);  
 }
 
+.coeur:active .contour{
+    display: none;
+}
+
+.coeur:active .plein{
+    display: block;
+    background: linear-gradient(172deg, #FF79DA,#9356DC);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    animation: battement_coeur 1200ms cubic-bezier(0,0,.4,1);  
+}
+
 @keyframes battement_coeur {
     0% {
         transform: scale(0);
@@ -269,39 +286,71 @@ figcaption{
 }
 
 
-        /* LOADER */
+        /* SPINNER LOADER */
 
-.spinner{
-    height: 500px;
-    line-height: 500px;
-    background-color: pink;
-    text-align: center;
+#spinner{
+    height: 100%;
+    width: 100%;
+    background-color: #19001d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: .95;
+    animation: chargement 300ms forwards;
+    animation-delay: 2500ms;
+}
+
+@keyframes chargement{
+    0%{
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(0);
+    }
+
 }
 
 .loader{
-    width: 50px;
-    height: 50px;
-    display: inline-block;
-    vertical-align: middle;
+    width: 150px;
+    height: 150px;
     position: relative;
-}
-
-.loader_quart{
-    border: 5px solid rgba(255, 255, 255, 0.5);
-    border-radius: 50px;
-}
-
-.loader_quart:after{
-    content: "";
-    position: absolute;
-    top: -6px;
-    left: -6px;
-    bottom: -6px;
-    right: -6px;
-    border: 5px solid transparent;
-    border-radius: 50px;
-    border-top-color: #fff;
+    background: linear-gradient(#9356DC, #FF79DA, #99E2D0);
+    border-radius: 50%;
     animation: spin 1s linear infinite;
+}
+
+.loader span{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: linear-gradient(#9356DC, #FF79DA, #99E2D0);
+}
+
+.loader span:nth-child(1){
+    filter: blur(20px);
+}
+.loader span:nth-child(2){
+    filter: blur(5px);
+}
+.loader span:nth-child(3){
+    filter: blur(5px);
+}
+.loader span:nth-child(4){
+    font-family: "shrikhand", sans-serif;
+    content: "";
+    background: #240229;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: spin_2 1s linear infinite;
 }
 
 @keyframes spin{
@@ -310,6 +359,28 @@ figcaption{
     }
     100%{
         transform: rotate(360deg);
+    }
+}
+
+@keyframes spin_2{
+    0%{
+        transform: rotate(0deg);
+        color: #484848;
+    }
+    80%{
+        color: #fff;
+        text-shadow: 0 0 10px #fff;
+    }
+    85%{
+        color: #484848;
+    }
+    90%{
+        color: #fff;
+        text-shadow: 0 0 10px #fff;
+    }
+    100%{
+        transform: rotate(-360deg);
+        color: #484848;
     }
 }
 
