--- a/css/styles_restaurants.css
+++ b/css/styles_restaurants.css
@@ -121,6 +121,11 @@ h1{
     font-size: 25px;
 }
 
+#menu a{
+    text-decoration: none;
+    color: black;
+}
+
 .repas{
     text-transform: uppercase;
     font-size: 17px;
@@ -132,20 +137,65 @@ h1{
 
 .assiette{
     margin: 15px 0;
-    padding: 10px;
     border-radius: 15px;
     background-color: white;
     box-shadow: 0 5px 10px rgb(200, 200, 200);
+    display: flex;
+}
+
+.assiette_titre_description{
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    overflow: hidden;
 }
     
 .assiette_description{
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.assiette_description h3,
+.assiette_description p{
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.coche{
+    border-radius: 0 15px 15px 0;
+    width: 20%;
+    background-color: #99E2D0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.coche .valider{
+    border: 1px solid #fff;
+    border-radius: 50%;
+    padding: 2px;
+    font-size: 17px;
+    background-color: #fff;
+    color: #99E2D0;
+}
+
+.assiette:hover .coche{
     display: flex;
-    justify-content: space-between;
-    padding-right: 15px;
+}
+
+.assiette:hover .assiette_description h3,
+.assiette_description p{
+    overflow:hidden;
+    text-overflow:ellipsis;
 }
 
 .prix{
     font-weight: bold;
+    display: flex;
+    align-items: flex-end;
+    padding: 0 10px;
 }
 
 #bouton_commander{
