--- a/css/styles_restaurants.css
+++ b/css/styles_restaurants.css
@@ -165,6 +165,10 @@ h1{
     animation-delay: 800ms;
 }
 
+.assiette_4{
+    animation-delay: 1200ms;
+}
+
 .assiette_titre_description{
     width: 100%;
     height: 100%;
@@ -303,12 +307,29 @@ h1{
     width: 28px;
 }
     
-    @media screen and (min-width: 1024px) {
+
+        /* ECRAN SUPERIEUR 1024PX */
+
+@media screen and (min-width: 1024px) {
     
-        
-    
-    
-    
-    
+    .plats{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
+
+    #carte_menu img{
+        height: 400px;
+    }
+
+    .assiette{
+        width: 32%;
+    }
+    
+    #bloc_footer ul{
+        display: flex;
+        justify-content: space-between;
+    }
+    
+}
     
